Revert "Change to ZGC"
This reverts commit c96856b7a1209958f5e1f9727328a4d1e987a392.

ZGC causes 32bit builds to crash on start